bug - progress component: z-index:2

--- a/components/essence-progress/src/progress.less
+++ b/components/essence-progress/src/progress.less
@@ -67,6 +67,7 @@ to { left: 100%; }
 //windows 8 style loader 
 .e-progress-circle {
   position: relative;
+  z-index: 2;
   margin: 0 auto;
   width: @e-unit*11.25;
   height:@e-unit*11.25;
